samples/_failures_safe/1761390791_981f64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fad7fe5c.c: In function ‘main’:
./samples/SAFE/__tmp_fad7fe5c.c:141:9: error: expected declaration or statement at end of input
  141 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_fad7fe5c.c:141:9: error: expected declaration or statement at end of input
